--- a/output/refs.bib
+++ b/output/refs.bib
@@ -73,7 +73,20 @@
 	author = "Walter Rudin",
 	title = "Function Theory in the Unit Ball of $\mathbb{C}^n$",
 	publisher = "Springer-Verlag",
-	year = 1980,
+	year = 1980
+}
+@book{rudin4,
+	author = "Walter Rudin",
+	title = "Functional Analysis",
+	publisher = "McGraw-Hill Book Company",
+	edition = "2nd",
+	year = 1991
+}
+@book{brezis,
+	author = "Haim Brezis",
+	title = "Functional Analysis, Sobolev Spaces and Partial Differential Equations",
+	publisher = "Springer-Verlag",
+	year = 2011,
 }
 @book{munkres,
 	author = "James Raymond Munkres",
